- fix: country text align

--- a/src/styles/_country.scss
+++ b/src/styles/_country.scss
@@ -14,7 +14,7 @@
         }
 
         p, h2{
-            text-align: center;
+            text-align: left;
             font-size: calc(16px + 1vw);
             margin: 5px;
         }
