--- a/src/styles/_covidtable.scss
+++ b/src/styles/_covidtable.scss
@@ -2,6 +2,10 @@
     margin-top: 30px;
     width: 100%;
 
+    h2{
+      text-align: center;
+    }
+
     table {
         border-collapse: collapse;
         border-spacing: 0;
